# Resana

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  README.md
enc_temp_folder/b1235cd1453e9fdfd30d8dc733a2de/: ProcessPanel.h
enc_temp_folder/b2ce93dc8a76d9a81e9bc64abc48c90/: ProcessPanel.cpp
resana/: CMakeLists.txt
resana/config/: imgui.ini
resana/lib/glad/: CMakeLists.txt
resana/lib/glad/include/glad/: glad.h
resana/lib/glad/src/: glad.c
resana/lib/imgui/: CMakeLists.txt  imgui_demo.cpp
resana/lib/imgui/examples/example_glfw_opengl2/: example_glfw_opengl2.vcxproj
resana/lib/imgui/examples/example_glfw_opengl3/: example_glfw_opengl3.vcxproj
resana/lib/imgui/examples/example_glfw_vulkan/: example_glfw_vulkan.vcxproj
resana/lib/imgui/examples/example_sdl_directx11/: example_sdl_directx11.vcxproj
resana/lib/imgui/examples/example_sdl_opengl2/: example_sdl_opengl2.vcxproj
resana/lib/imgui/examples/example_sdl_opengl3/: example_sdl_opengl3.vcxproj
resana/lib/imgui/examples/example_sdl_vulkan/: example_sdl_vulkan.vcxproj
resana/lib/imgui/examples/example_win32_directx10/: example_win32_directx10.vcxproj
resana/lib/imgui/examples/example_win32_directx12/: example_win32_directx12.vcxproj
resana/lib/imgui/examples/example_win32_directx9/: example_win32_directx9.vcxproj
resana/src/: rspch.cpp  rspch.h
resana/src/core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
resana/src/helpers/: Container.h  FileUtils.cpp  FileUtils.h  Time.cpp  Time.h  WinFuncs.h
resana/src/imgui/: ImGuiBuild.h  ImGuiHelpers.h  ImGuiLayer.cpp  ImGuiLayer.h
resana/src/panels/: Panel.h  PerfPanel.cpp  PerfPanel.h  PerformancePanel.cpp  PerformancePanel.h  ProcessPanel.cpp  ProcessPanel.h  ResourceAnalyzer.cpp  ResourceAnalyzer.h  ResourcePanel.cpp  ResourcePanel.h  SystemTasksPanel.h  SystemsTasksPanel.cpp
resana/src/perfdata/: CPUPerf.cpp  CPUPerf.h  MemoryPerf.cpp  MemoryPerf.h  PerfManager.cpp  PerfManager.h
resana/src/proc/: ProcessManager.cpp  ProcessManager.h
resana/src/sandbox/: Sandbox.cpp  Sandbox.h
resana/src/system/: CPUData.cpp  CPUData.h  CPUPerformance.cpp  CPUPerformance.h  ConcurrentProcess.cpp  ConcurrentProcess.h  MemoryData.cpp  MemoryData.h  ProcessContainer.cpp  ProcessContainer.h  ProcessEntry.h  ProcessManager.cpp  ProcessManager.h  ProcessMap.cpp  ProcessMap.h  ProcessorData.cpp  SafeLockContainer.cpp  SafeLockContainer.h  SystemData.cpp  SystemData.h  ThreadPool.cpp  ThreadPool.h
resana/src/system/base/: ConcurrentProcess.cpp  ConcurrentProcess.h  SystemObject.h
resana/src/system/cpu/: CPUPerformance.cpp  CPUPerformance.h  LogicalCoreData.cpp  LogicalCoreData.h  ProcessorData.h
resana/src/system/memory/: MemoryPerformance.cpp  MemoryPerformance.h
resana/src/system/processes/: Process.cpp  Process.h  ProcessContainer.cpp  ProcessContainer.h  ProcessEntry.cpp  ProcessEntry.h  ProcessManager.cpp  ProcessManager.h  ProcessMap.cpp  ProcessMap.h
